[package]
name = "multi-producer-sink"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Provides handles to sinks, allowing multiple different tasks to write to the same underlying sink."
repository = "https://github.com/AljoschaMeyer/multi-producer-sink"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
futures = "0.1.17"
ordermap = "0.3.3"

[dev-dependencies]
quickcheck = "0.4.1"
rand = "0.3.18"
atm-async-utils = { git = "https://github.com/AljoschaMeyer/atm-async-utils" }
void = { git = "https://github.com/AljoschaMeyer/rust-void" }
