[package]
name = "multi-producer-sink"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Provides handles to sinks, allowing multiple different tasks to write to the same underlying sink."
repository = "https://github.com/AljoschaMeyer/multi-producer-sink"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
futures = "0.1.17"
ordermap = "0.3.3"

[dev-dependencies]
quickcheck = "0.4.1"
rand = "0.3.18"
void = "1.0.2"
atm-async-utils = "0.1.0"
